# policyengine-sim-api

./: .gitignore  AGENTS.md  Makefile  README.md
libs/policyengine-simulation-contract/: README.md  pyproject.toml
libs/policyengine-simulation-contract/src/policyengine_simulation_contract/: __init__.py  budget_window_state.py  dataset_uri.py  gateway_models.py  hf_dataset.py
libs/policyengine-simulation-contract/tests/: conftest.py  test_budget_window_state.py  test_dataset_uri.py  test_gateway_models.py  test_hf_dataset.py
libs/policyengine-simulation-observability/: README.md  pyproject.toml
libs/policyengine-simulation-observability/src/policyengine_simulation_observability/: __init__.py  errors.py  logfire_legacy.py  observability.py
libs/policyengine-simulation-observability/tests/: test_errors.py  test_logfire_legacy.py  test_observability.py  test_telemetry.py
projects/policyengine-api-household/: README.md  pyproject.toml
projects/policyengine-api-household/src/policyengine_api_household/: __init__.py  country.py  main.py  periods.py  settings.py
projects/policyengine-api-household/src/policyengine_api_household/models/: household.py
projects/policyengine-api-household/src/policyengine_api_household/routers/: calculate.py
projects/policyengine-api-household/src/policyengine_api_household/utils/: deprecated_inputs.py
projects/policyengine-api-household/tests/: test_calculate.py  test_periphery.py
projects/policyengine-api-simulation/: README.md  pyproject.toml
projects/policyengine-api-simulation/fixtures/gateway/: shared.py
projects/policyengine-api-simulation/requirements/: modal-gateway-image.txt  modal-simulation-image.txt
projects/policyengine-api-simulation/src/modal/: _image_setup.py  app.py  budget_window_batch.py  budget_window_scheduler.py  logfire_legacy.py  prewarm_app.py
projects/policyengine-api-simulation/src/policyengine_api_simulation/: main.py  observability.py  simulation_output_builder.py  simulation_runtime.py
projects/policyengine-api-simulation/tests/: test_image_setup_prebuild.py  test_logfire_legacy.py  test_modal_bundle_image.py  test_modal_image_requirements.py  test_observability.py  test_simulation_output_builder.py
projects/policyengine-api-simulation/tests/gateway/: test_endpoints.py  test_errors.py
projects/policyengine-apis-integ/: pyproject.toml
projects/policyengine-apis-integ/tests/simulation/: conftest.py  test_calculate.py
projects/policyengine-simulation-executor/: Dockerfile  README.md  dump_package_version.sh  pyproject.toml
projects/policyengine-simulation-executor/fixtures/: __init__.py  fake_modal.py  identity_stubs.py  test_modal_scripts.py  test_policyengine_package_update_scripts.py  test_simulation_api_contracts.py  test_simulation_output_builder.py  test_support.py
projects/policyengine-simulation-executor/fixtures/gateway/: __init__.py  package_imports.py  shared.py  test_endpoints.py
projects/policyengine-simulation-executor/src/modal/: __init__.py  _image_setup.py  app.py  budget_window_batch.py  budget_window_context.py  budget_window_results.py  budget_window_scheduler.py  budget_window_state.py  dependency_pins.py  fanout.py  logfire_legacy.py  logging_redaction.py  precompute_app.py  prewarm_app.py  segmented_national.py  smoke_app.py
projects/policyengine-simulation-executor/src/policyengine_simulation_executor/: artifact_keys.py  artifact_store.py  baseline_artifacts.py  compat_models.py  dataset_uri.py  generate_openapi.py  main.py  national_partition.py  observability.py  precompute.py  precompute_models.py  release_bundle.py  segmented_national_reduce.py  settings.py  simulation.py  simulation_macro_output.py  simulation_microdata.py  simulation_output_budget.py  simulation_output_builder.py  simulation_output_cliff.py  simulation_output_common.py  simulation_output_distribution.py  simulation_output_geographic.py  simulation_output_inequality.py  simulation_output_labor.py  simulation_output_poverty.py  simulation_runtime.py  telemetry.py
projects/policyengine-simulation-executor/tests/: conftest.py  test_app_redaction.py  test_artifact_keys.py  test_artifact_store.py  test_baseline_artifacts.py  test_budget_window_batch.py  test_budget_window_context.py  test_budget_window_results.py  test_budget_window_scheduler.py  test_dataset_uri.py  test_gcp_credentials.py  test_hf_dataset.py  test_image_setup_prebuild.py  test_modal_bundle_image.py  test_modal_image_requirements.py  test_modal_scripts.py  test_modal_telemetry.py  test_national_partition.py  test_observability.py  test_placeholder.py  test_policyengine_dependency_source.py  test_policyengine_package_update_scripts.py  test_precompute.py  test_precompute_app.py  test_region_group_resolution.py  test_release_bundle.py  test_segmented_national.py  test_segmented_national_reduce.py  test_settings.py  test_simulation_api_contracts.py  test_simulation_microdata.py  test_simulation_output_builder.py  test_standalone_simulation_contract.py  test_update_version_registry.py
projects/policyengine-simulation-executor/tests/gateway/: __init__.py  test_auth.py  test_budget_window_state.py  test_endpoints.py  test_models.py  test_ping.py
projects/policyengine-simulation-executor/tests/integration/: test_budget_window_ephemeral_modal.py  test_image_smoke_modal.py
projects/policyengine-simulation-gateway/: README.md  openapi-python-client.yaml  pyproject.toml
projects/policyengine-simulation-gateway/fixtures/: gateway_endpoints.py  package_imports.py
projects/policyengine-simulation-gateway/src/policyengine_simulation_gateway/: __init__.py  app.py  endpoints.py  generate_openapi.py  smoke_app.py  testing.py
projects/policyengine-simulation-gateway/tests/: conftest.py  test_auth.py  test_endpoints.py  test_health.py  test_import_coverage.py  test_modal_gateway_image.py  test_openapi_golden.py  test_package_imports.py  test_route_table.py
projects/policyengine-simulation-gateway/tests/golden/: openapi.json
projects/policyengine-simulation-gateway/tests/integration/: test_image_smoke_modal.py
(+34 files in other folders)
