[project]
name = "policyengine-api-integ"
version = "0.1.0"
readme = "README.md"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"},
]
license = {file = "../../LICENSE"}
requires-python = ">=3.13, <4.0"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "policyengine_api_simulation_client",
    "pydantic-settings (>=2.8.1,<3.0.0)",
]

[project.optional-dependencies]
test = [ "pytest>=8.3.4", "pytest-xdist>=3.7.0", "backoff>=2.2.1", "httpx>=0.27.0"]
build = [ "pyright>=1.1.401", "black>=25.1.0",]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = ["tests"]
markers = [
    "beta_only: mark test as only safe to run against beta environment (not prod)",
]

[tool.uv.sources]
policyengine_api_simulation_client = { path = "../policyengine-simulation-executor/artifacts/clients/python" }

[tool.pyright]
#The generated clients do not do the "public export" convention
reportPrivateImportUsage = "none"

[dependency-groups]
test = [
    "backoff>=2.2.1",
]
