[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policyengine-simulation-executor"
version = "0.1.0"
readme = "README.md"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"},
]
license = {file = "../../LICENSE"}
requires-python = ">=3.13,<3.14"
dependencies = [
    "opentelemetry-instrumentation-sqlalchemy (>=0.51b0,<0.52)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.51b0,<0.52)",
    "policyengine-fastapi",
    "policyengine-simulation-observability",
    "policyengine-simulation-contract",
    "policyengine==4.19.0",
    "policyengine-core==3.28.0",
    "policyengine-uk==2.89.2",
    "policyengine-us==1.752.2",
    "tables>=3.10.2",
    "modal>=0.73.0",
    "policyengine-observability[fastapi]>=1.3.0,<2",
    "logfire>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/policyengine_simulation_executor"]

# Modal image bootstrap. Resolved inside uv.lock together with the
# project; the image installs it directly with
# uv_sync(--only-group modal-simulation-image, frozen=True), so image
# packages can only change through a relock and always match the
# versions the test environment runs against. Country models are NOT
# here — the policyengine bundle install manages them.
[dependency-groups]
modal-simulation-image = [
    "uv",
    # The policyengine bundle installer runs `python -m pip install` in
    # the target environment, and uv-created venvs do not ship pip.
    "pip",
    "fastapi>=0.115.0",
    "tables>=3.10.2",
    "logfire>=3.0.0",
    # logfire imports importlib_metadata unconditionally on Python 3.13
    # but does not declare it (see issue #602).
    "importlib-metadata>=8",
    "policyengine-observability[fastapi]>=1.3.0,<2",
]
# The executor's budget-window scheduler tests exercise the gateway app
# end-to-end; the gateway project rides in as a dev-only path dependency.
dev = [
    "policyengine-simulation-gateway",
]

[tool.uv.sources]
policyengine-fastapi = { path = "../../libs/policyengine-fastapi", editable = true }
policyengine-simulation-observability = { path = "../../libs/policyengine-simulation-observability", editable = true }
policyengine-simulation-contract = { path = "../../libs/policyengine-simulation-contract", editable = true }
policyengine-simulation-gateway = { path = "../policyengine-simulation-gateway", editable = true }

[project.optional-dependencies]
test = [ "pytest>=8.3.4", "pytest-asyncio>=0.25.3", "pytest-cov>=6.1.1",]
build = [ "pyright>=1.1.401", "black>=25.1.0", "openapi-python-client>=0.21.6",]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

testpaths = ["tests"]

# Skip real-Modal integration smoke tests unless the operator explicitly
# opts in with ``-m integration``. The default test run stays hermetic.
addopts = "-m 'not integration'"
markers = [
  "integration: runs against a real (ephemeral) Modal deployment",
]
